--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,7 +1,6 @@
 <resources>
 
     <string name="app_name">DigiAssist</string>
-    <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
     <string name="title_activity_digi_assist">DigiAssistActivity</string>
     <string name="add_reminder">Add Medication Reminder</string>
@@ -15,30 +14,33 @@
     <string name="medication_end_date">End Date</string>
     <string name="medication_start_time">Start Time</string>
     <string name="medication_end_time">End Time</string>
-    <string name="select">Select</string>
-    <string name="view_reminders">View All Medication Reminders</string>
+    <string name="select">For more info, click on the Drug Name</string>
+    <string name="view_reminders">View Medication Reminders</string>
+    <string name="save">SAVE</string>
+    <string name="cancel">CANCEL</string>
     <string name="list_medication">List All Current Medication Details</string>
     
-    <string name="submen_control_lista">Medication List</string>
-	<string name="submen_control_lista_amox">Amoxicilina</string>
-	<string name="submen_control_lista_para">Paracetamol</string>
-	<string name="submen_control_lista_acenocumarol">Acenocumarol</string>
-	<string name="submen_control_lista_supradym">Supradym</string>
-	<string name="submen_control_lista_salbutamol">Salbutamol</string>
-	
-	<string name="submen_control_lista_detalle_medicamento">Medicament: </string>
-	<string name="submen_control_lista_detalle_indicaciones">Instructions: </string>
-	<string name="submen_control_lista_detalle_contraindicaciones">Side-effects: </string>
-	<string name="submen_control_lista_detalle_inicio">Start of Treatment: </string>
-	<string name="submen_control_lista_detalle_duracion">Duration: </string>
-	<string name="submen_control_lista_detalle_dias">days </string>
-	<string name="submen_control_lista_detalle_dosificacion">Dosage: </string>
-	<string name="submen_control_lista_detalle_unidades">Units: </string>
-	<string name="literal_dias">days</string>
-	<string name="literal_cada">every</string>
-	<string name="literal_horas">hours</string>
-	
-
+    <string name="symptoms">Symptoms</string>
+    <string name="cough">Cough</string>
+    <string name="soreThroat">Sore Throat</string>
+    <string name="nasalCongestion">Nasal Congestion</string>
+    <string name="sneezing">Sneezing</string>
+    <string name="nausea">Nausea</string>
+    <string name="headache">Headache</string>
+    <string name="dizzy">Dizziness</string>
+    <string name="fever">Fever</string>
+    <string name="runny_nose">Runny nose</string>
+    <string name="allergicReaction">Allergic Reaction</string>
+    <string name="diarrhea">Diarrhea</string>
+    <string name="depressed">Depressed</string>
+    <string name="weightLoss">Weight Loss</string>
+    <string name="weightGain">Weight Gain</string>
+    <string name="other">Other</string>
+    <string name="details">More Details</string>
+    <string name="sendToDoc">Send to my doctor</string>
+    
+    
+    
     <string-array name="medication_frequency_num">
         <item>1</item>
         <item>2</item>
@@ -53,15 +55,19 @@
         <item>11</item>
         <item>12</item>
     </string-array>
+
     <string name="medication_frequency_num_prompt">1</string>
-	
-	<string-array name="medication_frequency_unit">
+
+    <string-array name="medication_frequency_unit">
         <item>Hours</item>
         <item>Days</item>
         <item>Weeks</item>
     </string-array>
-    <string name="medication_frequency_unit_prompt">Days</string>
 
+    <string name="medication_frequency_unit_prompt">Days</string>
     <string name="title_activity_lsit_medication">LsitMedicationActivity</string>
+    <string name="hello_world">Hello world!</string>
+    <string name="title_activity_view_calendar">ViewCalendarActivity</string>
+    <string name="title_activity_send_symptoms">SendSymptomsActivity</string>
 
 </resources>
