--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,3 +1,23 @@
+<!-- 
+Copyright(c) 2012 Anitha Suryanarayan 
+
+This program is free software: you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation, either version 3 of the License, or
+(at your option) any later version.
+
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
+Author: Anitha Suryanarayan
+feedback: anitha@pdx.edu
+-->
+
 <resources>
 
     <string name="app_name">DigiAssist</string>
@@ -21,6 +41,7 @@
     <string name="list_medication">List All Current Medication Details</string>
     
     <string name="symptoms">Symptoms</string>
+    <string name="selectSymptoms">Select all that apply</string>
     <string name="cough">Cough</string>
     <string name="soreThroat">Sore Throat</string>
     <string name="nasalCongestion">Nasal Congestion</string>
