--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -15,8 +15,7 @@ You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 Author: Anitha Suryanarayan
-feedback: anitha@pdx.edu
--->
+feedback: anitha@pdx.edu-->
 
 <resources>
 
@@ -60,7 +59,7 @@ feedback: anitha@pdx.edu
     <string name="sendToDoc">Send to my doctor</string>
     <string name="view_label_medicine">Medicine:</string>
     <string name="view_label_dosage">Dosage:</string>
-    <string name="view_label_start">Start Time:</string>
+    <string name="view_label_start">Time:</string>
     <string name="view_label_end">End Time:</string>
     <string name="view_label_recurrence">Recurrence:</string>
     <string name="view_label_delete">Delete</string>
@@ -89,19 +88,22 @@ feedback: anitha@pdx.edu
     </string-array>
 
     <string name="medication_frequency_unit_prompt">Days</string>
-    <string name="title_activity_lsit_medication">LsitMedicationActivity</string>
+    <string name="title_activity_lsit_medication">List Medication Details</string>
     <string name="hello_world">Hello world!</string>
-    <string name="title_activity_view_calendar">ViewCalendarActivity</string>
-    <string name="title_activity_send_symptoms">SendSymptomsActivity</string>
-    <string name="title_activity_medication_supply">MedicationSupplyActivity</string>
+    <string name="title_activity_view_calendar">View Today\'s Medication Calendar</string>
+    <string name="title_activity_send_symptoms">Send Symptoms To Doctor</string>
+    <string name="title_activity_medication_supply">Medication Supplies</string>
     <string name="medication_supplies">Medication Supplies</string>
     <string name="settings">DigiAssist Settings</string>
     <string name="help">Help</string>
     <string name="medication_log">Medication Log</string>
-    <string name="title_activity_medication_log">MedicationLogActivity</string>
-    <string name="title_activity_digi_assist_settings">DigiAssistSettingsActivity</string>
-    <string name="title_activity_digi_assist_help">DigiAssistHelpActivity</string>
-
+    <string name="title_activity_medication_log">Medication Log</string>
+    <string name="title_activity_digi_assist_settings">Settings</string>
+    <string name="title_activity_digi_assist_help">Help</string>
+    <string name="sendEmailToDoc">Send Email To My Doctor</string>
+    <string name="otherDetails">Details</string>
+    
+    
     <string name="pulse_rate">Pulse Rate : </string>
     <string name="pain_level">Pain Level : </string>
     <string name="resp_rate">Respiratory Rate : </string>
